[package]
name = "slick-queue-api"
version = "0.1.0"
authors = ["Saju Thankappan <sajuthankappan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
env_logger = "0.7.1"
lapin = "1.4.1"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
tokio = { version = "0.2.22", features = ["macros"] }
warp = "0.2.5"
slick-models = { version = "0.11.6", git = "https://github.com/sajuthankappan/slick-models-rs.git" }
